--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+
     <application
         android:name=".Utils.AppController"
         android:allowBackup="true"
@@ -53,6 +56,14 @@
         <activity
             android:name=".SearchPage"
             android:label="@string/title_activity_search_page"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ProductPage"
+            android:label="@string/title_activity_product_page"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ContactUs"
+            android:label="@string/title_activity_contact_us"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
