--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,9 @@
             android:name=".ContactUs"
             android:label="@string/title_activity_contact_us"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".AddIntrest"></activity>
+        <activity android:name=".AddIntrest" />
+        <activity android:name=".AddShare" />
+        <activity android:name=".SignUp"></activity>
     </application>
 
 </manifest>
