--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -179,6 +179,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".RatingActivity"
+            android:label="@string/title_activity_rating"
+            android:parentActivityName=".HomePage"
+            android:theme="@style/Theme.AppCompat.Dialog">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.khalid.sharektest.HomePage" />
+        </activity>
     </application>
 
 </manifest>
