--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -196,6 +196,7 @@
         <activity
             android:name=".NotificationActivity"
             android:label="@string/title_activity_notifications" />
+
         <activity
             android:name=".SplashScreenActivity"
             android:label="@string/app_name"
@@ -206,7 +207,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
+            android:name=".CommonTags"
+            android:parentActivityName=".HomePage">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".HomePage" />
+        </activity>
+
+        <activity0
             android:name=".RatingActivity"
             android:label="@string/title_activity_rating"
             android:parentActivityName=".HomePage"
@@ -214,7 +224,7 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.khalid.sharektest.HomePage" />
-        </activity>
+        </activity0>
     </application>
 
 </manifest>
